--- a/website/LESS/tablet.less
+++ b/website/LESS/tablet.less
@@ -7,15 +7,26 @@ body {
       .topbar {
         display: none;
       }
-      .social {
-        display: none;
-      }
-      .weather {
-        display: none;
-      }
       .mainNav {
+        .menuSecOne {
+          justify-content: flex-end;
+          .menu {
+            display: none;
+          }
+        }
         .menuSecTwo {
           justify-content: flex-end;
+          .social {
+            display: none;
+          }
+          .weather {
+            display: none;
+          }
+          .search {
+            i {
+              color: orange;
+            }
+          }
         }
       }
     }
