--- a/website/LESS/stay.less
+++ b/website/LESS/stay.less
@@ -1,11 +1,91 @@
 .stayHeroImage {
     background-image: url("/website/images/pool.jpg");
-    height: 500px;
+    height: 800px;
     background-size: cover;
     background-position: center;
-    div {
+
+    .stayHero {
         display: flex;
         flex-direction: column;
-        
+        color: @color-1;
+        padding: 60px 0px 0px 15px;
+        background-color: rgba(0,0,0,0.3);
+        width: 100%;
+        height: 100%;
+
+        h1 {
+            .font-thin;
+            font-family: @cursive-font;
+            font-size: 36px;
+        }
+
+        h2 {
+            .font-thin;
+            font-family: @font;
+            font-size: 76px;
+            text-transform: uppercase;
+            margin: 10px 0px;;
+        }
+
+        p {
+            font-family: @font;
+            font-size: 20px;
+            line-height: 24px;
+            .font-regular;
+        }
+
+        .buttonDiv {
+            margin-top: 30px;
+        }
+
+        .button {
+            .btn;
+            background-color: transparent;
+            color: white;
+            border: 1px solid white;
+        }
+
+        .button:hover {
+            .hover;
+            border:1px solid @color-4;
+        }
     }
   }
+
+  .staySecOne {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 60px 0px;
+    color: @color-4;
+
+    h1 {
+        font-family: @cursive-font;
+        font-size: 50px;
+        margin-bottom: 25px;
+    }
+
+    p {
+        .font-thin;
+        font-family: @font;
+        font-size: 18px;
+        line-height: 26px;
+        width: 60%;
+        text-align: center;
+    }
+}
+
+.staySecTwo {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px 100px;
+
+    .el {
+        background-position: center;
+        background-size: cover;
+        width: 325px;
+        height: 150px;
+        margin: 30px;
+    }
+}
