--- a/website/css/index.css
+++ b/website/css/index.css
@@ -196,7 +196,7 @@ html {
   display: flex;
   flex-direction: column;
   color: #fff;
-  padding: 60px 0px 0px 15px;
+  padding: 100px 0px 0px 130px;
   background-color: rgba(0, 0, 0, 0.3);
   width: 100%;
   height: 100%;
@@ -208,8 +208,8 @@ html {
   font-size: 36px;
 }
 .stayHeroImage .stayHero h2 {
-  font-weight: 100;
   font-family: "Noto Sans TC", sans-serif;
+  font-weight: 100;
   font-size: 76px;
   text-transform: uppercase;
   margin: 10px 0px;
@@ -217,6 +217,7 @@ html {
 .stayHeroImage .stayHero p {
   font-size: 20px;
   line-height: 24px;
+  width: 65%;
   font-family: "Noto Sans TC", sans-serif;
   font-weight: 400;
 }
@@ -258,8 +259,8 @@ html {
   margin-bottom: 25px;
 }
 .staySecOne p {
-  font-weight: 100;
   font-family: "Noto Sans TC", sans-serif;
+  font-weight: 100;
   font-size: 18px;
   line-height: 26px;
   width: 60%;
@@ -268,14 +269,76 @@ html {
 .staySecTwo {
   display: flex;
   flex-wrap: wrap;
-  margin: 0px 100px;
+  padding: 0 8%;
 }
 .staySecTwo .el {
   background-position: center;
   background-size: cover;
   width: 325px;
   height: 150px;
-  margin: 30px;
+  margin: 25px;
+}
+.staySecTwo p {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 100;
+  color: #ee5d21;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+.staySecThree {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0 8%;
+  margin: 160px 0px 60px 0px;
+}
+.staySecThree .sec {
+  display: flex;
+  width: 48%;
+}
+.staySecThree .sec .img {
+  height: 250px;
+  width: 250px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 0px 20px 0px 0px;
+}
+.staySecThree .sec .right {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+.staySecThree .sec .right h1 {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 700;
+  color: #031741;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+.staySecThree .sec .right h2 {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 100;
+  color: gray;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+.staySecThree .sec .right p {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 100;
+  color: gray;
+  margin-bottom: 15px;
+  font-size: 16px;
+}
+.staySecThree .sec .right a {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  color: #ee5d21;
+  text-transform: uppercase;
+  font-size: 18px;
+  text-decoration: none;
 }
 .font-thin {
   font-family: "Noto Sans TC", sans-serif;
@@ -340,7 +403,7 @@ html {
   align-items: center;
 }
 .mainNav .menuSecOne div p a {
-  color: orange;
+  color: #ee5d21;
   font-size: 56px;
   margin: 15px 0px;
   text-decoration: none;
@@ -435,4 +498,73 @@ html {
   height: 500px;
   background-size: cover;
   background-position: bottom;
+}
+.secOne {
+  padding: 0 8%;
+  margin: 100px 0px;
+}
+.secOne h1 {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  color: #031741;
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+.secOne h2 {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  color: #ee5d21;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.secOne p {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  color: #031741;
+  font-size: 14px;
+  line-height: 18px;
+  margin-bottom: 20px;
+}
+.secOne .la {
+  color: #031741;
+}
+.secOne .rejuv {
+  color: #ee5d21;
+}
+.secOne .rejuv:hover {
+  color: red;
+  cursor: pointer;
+}
+footer {
+  background-color: #f4f6f7;
+  display: flex;
+  justify-content: space-around;
+  height: 500px;
+  padding: 60px 8%;
+}
+footer .list h1 {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 100;
+  color: #ee5d21;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+footer .list ul {
+  display: flex;
+  flex-direction: column;
+}
+footer .list ul li {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 100;
+  color: gray;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  font-size: 12px;
+}
+footer .list .social h2 {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 100;
+  color: gray;
+  text-transform: uppercase;
 }
