--- a/website/LESS/stay.less
+++ b/website/LESS/stay.less
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         color: @color-1;
-        padding: 60px 0px 0px 15px;
+        padding: 100px 0px 0px 130px;
         background-color: rgba(0,0,0,0.3);
         width: 100%;
         height: 100%;
@@ -21,16 +21,15 @@
 
         h2 {
             .font-thin;
-            font-family: @font;
             font-size: 76px;
             text-transform: uppercase;
             margin: 10px 0px;;
         }
 
         p {
-            font-family: @font;
             font-size: 20px;
             line-height: 24px;
+            width: 65%;
             .font-regular;
         }
 
@@ -68,7 +67,6 @@
 
     p {
         .font-thin;
-        font-family: @font;
         font-size: 18px;
         line-height: 26px;
         width: 60%;
@@ -79,13 +77,85 @@
 .staySecTwo {
     display: flex;
     flex-wrap: wrap;
-    margin: 0px 100px;
+    padding: 0 8%;
+
 
     .el {
         background-position: center;
         background-size: cover;
         width: 325px;
         height: 150px;
-        margin: 30px;
+        margin: 25px;
+    }
+
+    p {
+        .font-thin;
+        color: @color-6;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 18px;
+    }
+
+    // p:hover {
+    //     text-decoration: underline;
+    //     cursor: pointer;
+    // }
+}
+
+.staySecThree {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0 8%;
+    margin: 160px 0px 60px 0px;
+
+    .sec {
+        display: flex;
+        width: 48%;
+
+        .img {
+            height: 250px;
+            width: 250px;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            margin: 0px 20px 0px 0px;
+        }
+        
+        .right {
+            display: flex;
+            flex-direction: column;
+            margin-left: 20px;
+
+            h1 {
+                .font-bold;
+                color: @color-4;
+                text-transform: uppercase;
+                margin-bottom: 15px;
+                font-size: 20px;
+            }
+
+            h2 {
+                .font-thin;
+                color: gray;
+                text-transform: uppercase;
+                font-size: 16px;
+                margin-bottom: 15px;
+            }
+
+            p {
+                .font-thin;
+                color: gray;
+                margin-bottom: 15px;
+                font-size: 16px;
+            }
+
+            a  {
+                .font-regular;
+                color: @color-6;
+                text-transform: uppercase;
+                font-size: 18px;
+                text-decoration: none;
+            }
+        }
     }
 }
