--- a/website/LESS/tablet.less
+++ b/website/LESS/tablet.less
@@ -29,6 +29,22 @@ body {
           }
         }
       }
+      .staySecThree {
+        display: flex;
+        flex-direction: column;
+
+        .sec {
+          width: 100%;
+
+          img {
+            width: 300px;
+          }
+        }
+
+        .one {
+          margin-bottom: 50px;
+        }
+      }
     }
   }
 }
