--- a/website/LESS/stay.less
+++ b/website/LESS/stay.less
@@ -112,9 +112,9 @@
         display: flex;
         width: 48%;
 
-        .img {
-            height: 250px;
-            width: 250px;
+        img {
+            // height: 250px;
+            width: 200px;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
