--- a/website/LESS/index.less
+++ b/website/LESS/index.less
@@ -198,6 +198,21 @@ html {
   cursor: pointer;
 }
 
+.square-btn {
+  padding: 10px 30px;
+  color: @color-6;
+  border: 1px solid @color-6;
+  font-size: 18px;
+  text-transform: uppercase;
+  .font-bold;
+  text-decoration: none;
+}
+
+.square-btn-hover {
+  background-color: #ad1f21;
+  color: @color-1;
+}
+
 //sticky
 .sticky {
 	position: fixed;
@@ -391,6 +406,87 @@ html {
   .rejuv:hover {
     color: red;
     cursor: pointer;
+  }
+}
+
+.secFour {
+  padding: 0 8%;
+  margin: 30px 0px;
+  background-color: @color-2;
+
+  .heading {
+    padding: 40px 0px 50px 0px;
+
+    h1 {
+      font-family: @cursive-font;
+      color: @color-4;
+      font-style: italic;
+      font-size: 45px;
+    }
+
+    div {
+      margin: 20px 0px;
+
+      .button {
+        .square-btn
+      }
+
+      .button:hover {
+        .square-btn-hover
+      }
+    }
+  }
+
+  .boxes {
+    display: flex;
+    justify-content: space-between;
+    .box {
+      width: 24.8%;
+      height: 500px;
+      background-image: url(../images/rollercoaster.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      padding: 15px;
+
+      div {
+        border-left: 3px solid @color-1;
+        color: @color-1;
+        padding-left: 15px;
+        margin-bottom: 20px;
+
+        h2 {
+          font-family: @cursive-font;
+          font-size: 28px;
+          margin-bottom: 10px;
+        }
+
+        h3 {
+          .font-regular;
+          font-size: 22px;
+          text-transform: uppercase;
+          margin-bottom: 10px;
+        }
+
+        h4 {
+          .font-regular;
+          font-size: 14px;
+        }
+      }
+
+      p {
+        .font-thin;
+        color: @color-1;
+        border: 2px solid @color-1;
+        width: 30px;
+        height: 30px;
+        text-align: center;
+        font-size: 24px;
+      }
+
+    }
   }
 }
 
