--- a/website/css/index.css
+++ b/website/css/index.css
@@ -381,6 +381,20 @@ html {
   color: #f4f6f7;
   cursor: pointer;
 }
+.square-btn {
+  padding: 10px 30px;
+  color: #ee5d21;
+  border: 1px solid #ee5d21;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 700;
+  text-decoration: none;
+}
+.square-btn-hover {
+  background-color: #ad1f21;
+  color: #fff;
+}
 .sticky {
   position: fixed;
   top: 0;
@@ -556,6 +570,85 @@ html {
 .secOne .rejuv:hover {
   color: red;
   cursor: pointer;
+}
+.secFour {
+  padding: 0 8%;
+  margin: 30px 0px;
+  background-color: #f4f6f7;
+}
+.secFour .heading {
+  padding: 40px 0px 50px 0px;
+}
+.secFour .heading h1 {
+  font-family: "Sacramento", cursive;
+  color: #031741;
+  font-style: italic;
+  font-size: 45px;
+}
+.secFour .heading div {
+  margin: 20px 0px;
+}
+.secFour .heading div .button {
+  padding: 10px 30px;
+  color: #ee5d21;
+  border: 1px solid #ee5d21;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 700;
+  text-decoration: none;
+}
+.secFour .heading div .button:hover {
+  background-color: #ad1f21;
+  color: #fff;
+}
+.secFour .boxes {
+  display: flex;
+  justify-content: space-between;
+}
+.secFour .boxes .box {
+  width: 24.8%;
+  height: 500px;
+  background-image: url(../images/rollercoaster.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 15px;
+}
+.secFour .boxes .box div {
+  border-left: 3px solid #fff;
+  color: #fff;
+  padding-left: 15px;
+  margin-bottom: 20px;
+}
+.secFour .boxes .box div h2 {
+  font-family: "Sacramento", cursive;
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+.secFour .boxes .box div h3 {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+.secFour .boxes .box div h4 {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+}
+.secFour .boxes .box p {
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 100;
+  color: #fff;
+  border: 2px solid #fff;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  font-size: 24px;
 }
 footer {
   background-color: #f4f6f7;
