--- a/website/LESS/tablet.less
+++ b/website/LESS/tablet.less
@@ -29,6 +29,19 @@ body {
           }
         }
       }
+
+      .secFour {
+        .boxes {
+          .box {
+            width: 49.7%;
+          }
+          .three, .four {
+            display: none;
+          }
+        }
+ 
+      }
+
       .staySecThree {
         display: flex;
         flex-direction: column;
@@ -44,6 +57,11 @@ body {
         .one {
           margin-bottom: 50px;
         }
+      }
+
+      .secFive {
+        display: flex;
+        flex-direction: column;
       }
     }
   }
