--- a/website/LESS/phone.less
+++ b/website/LESS/phone.less
@@ -27,5 +27,41 @@ body {
         }
       }
     }
+
+    .staySecThree {
+      display: flex;
+      flex-direction: column;
+
+      .sec {
+        width: 100%;
+
+        img {
+          width: 150px;
+        }
+      }
+
+      .one {
+        margin-bottom: 50px;
+      }
+    }
+
+    .secFour {
+      .boxes {
+        display: flex;
+        flex-direction: column;
+        .box {
+          margin-top: 30px;
+          width: 100%
+        }
+        .three, .four {
+          display: none;
+        }
+      }
+    }
+
+    .secFive {
+      display: flex;
+      flex-direction: column;
+      }
+    }
   }
-}
