--- a/website/LESS/index.less
+++ b/website/LESS/index.less
@@ -443,7 +443,6 @@ html {
     .box {
       width: 24.8%;
       height: 500px;
-      background-image: url(../images/rollercoaster.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       display: flex;
@@ -487,6 +486,23 @@ html {
       }
 
     }
+
+    .one {
+      background-image: url(../images/rollercoaster.jpg);
+    }
+
+    .two {
+      background-image: url(../images/surfing.jpg);
+    }
+
+    .three {
+      background-image: url('../images/brewery.jpg');
+    }
+
+    .four {
+      background-image: url('../images/lake.jpg');
+    }
+
   }
 }
 
