--- a/website/LESS/stay.less
+++ b/website/LESS/stay.less
@@ -96,10 +96,10 @@
         font-size: 18px;
     }
 
-    // p:hover {
-    //     text-decoration: underline;
-    //     cursor: pointer;
-    // }
+    p:hover {
+        cursor: pointer;
+        color: red;
+    }
 }
 
 .staySecThree {
